test/spec_vectors/i32/fail/module_72.wat
(module (func (result i32) (i32.ctz (i64.const 0))))